# memetopia

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dioxus.toml  Dockerfile  build.rs  clippy.toml  justfile
.github/workflows/: docker-build-push.yml
api/: Cargo.toml
app/: Cargo.toml  Dioxus.toml  build.rs
app/assets/: tailwind.css
app/src/: lib.rs  main.rs  router.rs
app/src/pages/: home.rs
assets/: tailwind.css
src/: application.rs  layout.rs  lib.rs  main.rs  router.rs  utils.rs
src/pages/: generator.rs  home.rs
src/stores/: canvas_objects.rs  interaction_mode.rs  meme_canvas.rs  mod.rs  text_box.rs
