[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "api"
repository = { workspace = true }


[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }

[features]
server = ["dioxus/server"]
web = []
