[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "app"
repository = { workspace = true }


[dependencies]
api = { workspace = true }

serde = { workspace = true }
strum = { workspace = true }

dioxus = { workspace = true }
dioxus-free-icons = { workspace = true }
dioxus-primitives = { workspace = true }
dioxus-sdk = { workspace = true }

[build-dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }

[features]
server = ["dioxus/server"]
web = ["dioxus/web"]
